[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://FileDialog.tscn" type="PackedScene" id=3]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_right = 602.0
margin_bottom = 17.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="BtnHBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -229.0
margin_top = 20.0
margin_right = 229.0
margin_bottom = 54.0

[node name="SelectFilesBtn" type="Button" parent="BtnHBox"]
margin_right = 150.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 0 )
text = "Open files"

[node name="SelectWatermarkBtn" type="Button" parent="BtnHBox"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 0 )
text = "Select watermark"

[node name="StartBtn" type="Button" parent="BtnHBox"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 0 )
text = "Start"

[node name="InfoControl" type="Control" parent="."]
margin_left = 13.0
margin_top = 105.0
margin_right = 589.0
margin_bottom = 135.0

[node name="Label1" type="Label" parent="InfoControl"]
margin_right = 40.0
margin_bottom = 14.0
text = "Files opened:"

[node name="Label2" type="Label" parent="InfoControl"]
margin_top = 15.0
margin_right = 77.0
margin_bottom = 29.0
text = "Watermark: "

[node name="OpenedNLabel" type="Label" parent="InfoControl"]
margin_left = 86.0
margin_right = 571.0
margin_bottom = 14.0
text = "0"
clip_text = true

[node name="OpenedWatermarkLabel" type="Label" parent="InfoControl"]
margin_left = 86.0
margin_top = 15.0
margin_right = 575.0
margin_bottom = 29.0
text = "None"
clip_text = true

[node name="OpenDirBtn" type="Button" parent="InfoControl"]
margin_left = -13.0
margin_top = -103.0
margin_right = 42.0
margin_bottom = -89.0
text = "Open"

[node name="FileDialog" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 8.0
margin_top = 59.0
margin_right = 590.0
margin_bottom = 495.0

[node name="SelectingLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 484.0
margin_right = 67.0
margin_bottom = 498.0

[node name="ProgressPopup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.5
margin_top = -84.0
margin_right = 141.5
margin_bottom = 84.0
popup_exclusive = true

[node name="Panel" type="Panel" parent="ProgressPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgressFileLabel" type="Label" parent="ProgressPopup"]
margin_top = 99.0
margin_right = 283.0
margin_bottom = 114.0
align = 1
valign = 1
clip_text = true

[node name="ProgressQuantityLabel" type="Label" parent="ProgressPopup"]
margin_top = 52.0
margin_right = 283.0
margin_bottom = 67.0
text = "0/0"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="ProgressPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -11.5
margin_right = 81.5
margin_bottom = 11.5
step = 1.0
percent_visible = false

[node name="PopupOkBtn" type="Button" parent="ProgressPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.0
margin_top = -40.0
margin_right = 43.0
margin_bottom = -14.0
text = "ok"
